# nature

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  INSTALL.sh  LICENSE  LICENSE-MIT  README.md  README_CN.md  VERSION  build.py  build.zig  build.zig.zon  main  main.c  nature  test_runtime_debug_2024-12-25-001127.collapsed
nls/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  SETTINGS.md  TODO.md  justfile  language-configuration.json  package.json  pnpm-lock.yaml  skills-lock.json  webpack.config.js
nls/.cargo/: config.toml
nls/client/: package.json  pnpm-lock.yaml
nls/src/: analyzer.rs  document.rs  lib.rs  main.rs  package.rs  project.rs  utils.rs
nls/syntaxes/: n.tmLanguage.json
nls/tests/: analyzer_test.rs  build_pipeline_test.rs  global_eval_test.rs  server_test.rs  sync_compiler_changes_test.rs
runtime/: CMakeLists.txt  allocator.c  allocator.h  basic.c  basic.h  builtin.c  builtin.h  collector.c  collector.h  coroutine.c  coroutine.h  debug.c  debug.h  env.c  env.h  errort.h  fixalloc.c  fixalloc.h  gc.c  gc.h  gcbits.c  gcbits.h  linkco.c  linkco.h  locker.c  locker.h  memory.c  memory.h  processor.c  processor.h  rt_chan.c  rt_chan.h  rt_linked.h  rt_mutex.c  rt_mutex.h  rtype.c  rtype.h  runtime.c  runtime.h  sizeclass.h  (+6 more)
runtime/aco/: aco.c  aco.h  aco_assert_override.h  acosw.S
runtime/builtin/: builtin.c  builtin.h
runtime/llhttp/: api.h  llhttp.c  llhttp.h
runtime/mbedtls/: entropy_poll.c
runtime/memory/: allocator.c  allocator.h  collector.c  collector.h  memory.h  stack.c  stack.h
runtime/nutils/: array.c  array.h  basic.c  basic.h  coding.c  coding.h  coroutine.c  coroutine.h  dns.h  errort.h  fn.c  fn.h  fs.c  fs.h  hash.h  http.c  http.h  libc.c  libc.h  libuv.c  libuv.h  list.c  list.h  map.c  map.h  mutex.c  mutex.h  nutils.c  nutils.h  process.c  process.h  reflect.c  reflect.h  rt_signal.c  rt_signal.h  set.c  set.h  string.c  string.h  struct.c  (+17 more)
runtime/type/: any.c  any.h  array.c  array.h  basic.c  basic.h  fn.c  fn.h  hash.h  list.c  list.h  map.c  map.h  set.c  set.h  string.c  string.h  struct.c  struct.h  tuple.c  tuple.h  type_debug.c  type_debug.h
runtime/utils/: safe_assertf.h  safe_bitmap.h  safe_linked.h  safe_mutex.h  safe_slice.h  safe_table.h
test/: CMakeLists.txt  hello  hello.n  hello.s  hello_intel.s  test.c  test.h  test_amd64.c  test_amd64_add.c  test_amd64_div.c  test_amd64_jcc.c  test_amd64_jmp.c  test_amd64_mov.c  test_amd64_mul.c  test_amd64_set.c  test_amd64_stack_machine.c  test_amd64_sub.c  test_ast.c  test_compiler_lower_amd64.c  test_elf.c  test_lower_amd64.c  test_runtime.c
test/nature/: 004_if.n  call.n  sum.n
test/stubs/: 001_hello.n  003_call.n  004_if.n  2_call.n  3_if.n  5_closure.n  6_array.n  7_struct.n  8_bool.n  call.n  hello.n  hello.s  hello_intel.s  if.n  sum.n
tests/: .gitignore  20221025_01_hello.c  20221025_02_sum.c  20221025_03_call.c  20221025_05_while.c  20221025_06_closure.c  20221025_07_array.c  20221025_08_struct.c  20221025_09_map.c  20221113_01_rest.c  20230420_01_for_tradition.c  20230422_00_tuple.c  20230422_01_throw.c  20230422_02_catch.c  20230423_02_closure.c  20230427_00_number_casting.c  20230428_01_binary_integer.c  20230429_00_bit_operator.c  20230430_00_multi_operator.c  20230501_00_gc.c  20230502_00_gc_large.c  20230502_01_gc_auto.c  20230503_00_gc_closure.c  20230503_01_set_fn.c  20230505_00_typedef.c  20230506_01_throw.c  20230506_02_user.c  20230614_00_union.c  20230615_01_type_param.c  20230619_00_for.c  20230720_00_package.c  20230725_00_syscall.c  20230727_01_syscall.c  20230728_01_stat.c  20230729_01_syscall.c  20230730_00_net.c  20230809_00_fn_spread.c  20230809_01_sprintf.c  20230811_00_template.c  20230824_00_struct_ptr.c  (+110 more)
tests/assets/: travis.yaml
tests/black_box/: 20221025_05_while.c  20221025_06_closure.c  20221113_01_rest.c  CMakeLists.txt
tests/blackbox/: 20221025_01_hello.c  20221025_02_sum.c  20221025_03_call.c  20221025_04_if.c  20221025_05_for_cond.c  20221025_07_list.c  20221025_08_struct.c  20221025_09_map.c  20221025_10_set.c  20230421_00_for_iteration.c  20230421_00_for_iterator.c  20230422_00_tuple.c  20230422_01_throw.c  20230422_02_catch.c  20230423_00_advance_struct.c  20230423_01_closure.c  20230426_00_integer.c  20230426_01_float.c  20230427_01_unary.c  20230427_01_unary_neg.c  20230428_00_unary_not.c  20230428_01_binary_integer.c  20230428_02_binary_float.c  20230428_03_logical.c  20230430_01_fib.c  20230430_02_fib_closure.c  20230430_04_module.c  20230430_05_ssa.c  20230501_00_gc.c  20230502_00_gc_large.c  20230502_01_gc_auto.c  20230503_00_gc_closure.c  20230503_01_set_fn.c  20230505_01_for_rest.c  20230506_00_tuple_destr.c  20230506_01_throw.c  20230506_02_user.c  20230614_00_union.c  20230615_00_union_let.c  20230615_01_type_param.c  (+40 more)
tests/cases/: 20221025_02_sum.n  20221025_03_call.n  20221025_04_if.n  20221025_05_for_cond.n  20221025_07_list.n  20221025_08_struct.n  20221025_09_map.n  20221025_10_set.n  20221025_11_reg_alloc.n  20221025_12_else_if.n  20230421_00_for_iterator.n  20230422_00_tuple.n  20230422_01_throw.n  20230422_02_catch.n  20230423_01_closure.n  20230423_02_closure.n  20230426_00_integer.n  20230426_01_float.n  20230427_00_number_casting.n  20230427_01_unary_neg.n  20230428_00_unary_not.n  20230428_01_binary_integer.n  20230428_02_binary_float.n  20230428_03_logical.n  20230429_00_bit_operator.n  20230430_00_multi_operator.n  20230430_02_fib_closure.n  20230430_03_sort.n  20230430_05_ssa.n  20230502_00_gc_large.n  20230502_01_gc_auto.n  20230503_00_gc_closure.n  20230503_01_set_fn.n  20230505_00_typedef.n  20230505_01_for_rest.n  20230506_00_tuple_destr.n  20230506_01_throw.n  20230614_00_union.n  20230615_00_union_let.n  20230619_00_for.n  (+32 more)
tests/cmocka/: 5.patch  CMakeLists.txt
tests/elf_integration/: README.md  cpp_exception.cpp  debug_fixture.c  link_driver.c  run_docker.sh  run_in_container.sh  static_pie_glibc.c  static_pie_ifunc.c  static_pie_selfreloc.c
tests/features/: 20221025_02_sum.c  20221025_03_call.c  (+82 more)
(+1455 files in other folders)
